(#75 Update acceptance tests use cases functionality) added serviceReset() and made all tests run