@@ -12,6 +12,7 @@ import java.util.LinkedList;
 import java.util.List;
 import java.util.concurrent.ConcurrentHashMap;
 import java.util.concurrent.ConcurrentLinkedQueue;
+import java.util.stream.Collectors;
 
 public class SearchController {
 
@@ -35,14 +36,14 @@ public class SearchController {
     public Response<List<Item>> searchItem(String keyword, String category, double minPrice, double maxPrice, int itemRating, int storeRating){
         try{
             Collection<Store> stores = storeController.getStores();
-            List<Store> filteredStores = stores.stream().filter(store -> store.getRating() >= storeRating).toList();
+            List<Store> filteredStores = stores.stream().filter(store -> store.getRating() >= storeRating).collect(Collectors.toList());
             List<Item> items = new ArrayList<Item>();
             for (Store store : filteredStores) {
                 items.addAll(store.getItems().values().stream().filter(item ->
                         item.containsCategory(category) &
                                 priceRange(item, minPrice, maxPrice) &
                                 item.getRating() >= itemRating &
-                                item.getName().contains(keyword)).toList());
+                                item.getName().contains(keyword)).collect(Collectors.toList()));
             }
             return Response.getSuccessResponse(items);
         }
@@ -52,5 +53,9 @@ public class SearchController {
     }
     private boolean priceRange(Item item, double min, double max) {
         return item.getPrice() >= min && item.getPrice() <= max;
+    }
+
+    public void resetController() {
+        instance = new SearchController();
     }
 }
